--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,31 @@
           d="M6 18 18 6M6 6l12 12"
         />
       </symbol>
+      <symbol id="home" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+      </symbol>
+      <symbol id="shopping-bag" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+      </symbol>
+      <symbol id="chat-bubble-left-ellipsis" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 0 1 .778-.332 48.294 48.294 0 0 0 5.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+      </symbol>
+      <symbol id="briefcase" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
+      </symbol>
+      <symbol id="document-text" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+      </symbol>
+      <symbol id="phone-arrow-up-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 3.75v4.5m0-4.5h-4.5m4.5 0-6 6m3 12c-8.284 0-15-6.716-15-15V4.5A2.25 2.25 0 0 1 4.5 2.25h1.372c.516 0 .966.351 1.091.852l1.106 4.423c.11.44-.054.902-.417 1.173l-1.293.97a1.062 1.062 0 0 0-.38 1.21 12.035 12.035 0 0 0 7.143 7.143c.441.162.928-.004 1.21-.38l.97-1.293a1.125 1.125 0 0 1 1.173-.417l4.423 1.106c.5.125.852.575.852 1.091V19.5a2.25 2.25 0 0 1-2.25 2.25h-2.25Z" />
+      </symbol>
+      <symbol id="chevron-down" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+      </symbol>
+      <symbol id="chevron-up" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+      </symbol>
+      
     </svg>
 
     <header
@@ -309,13 +334,13 @@
     >
       <!-- nav icon -->
       <div class="nav-icon">
-        <svg class="w-8 h-8 text-zinc-700 dark:text-white">
+        <svg class="w-8 h-8 cursor-pointer text-zinc-700 dark:text-white">
           <use href="#bars-3"></use>
         </svg>
       </div>
 
       <!-- menu -->
-      <div class="menu flex flex-col justify-between fixed top-0 right-0 w-64 py-3 px-4 min-h-screen bg-white dark:bg-zinc-700 z-20">
+      <div class="menu flex flex-col fixed top-0 -right-72 w-64 py-4 px-4 h-[100vh] overflow-y-auto transition-all duration-500 bg-white dark:bg-zinc-700 z-20">
         
         <!-- menu logo & close btn -->
             <div class="flex items-center justify-between pb-5 mb-6 border-b border-b-gray-100 dark:border-b-white/10">
@@ -324,14 +349,102 @@
             <img src="./images/svgs/app-logo-type.svg" alt="" />
           </div>
           <div>
-            <svg class="w-5 h-5 text-zinc-600 dark:text-white">
+            <svg class="close-menu-btn cursor-pointer w-5 h-5 text-zinc-600 dark:text-white">
               <use href="#x-mark"></use>
             </svg>
           </div>
             </div>
 
             <!-- menu items -->
-            <div></div>
+            <div class="px-2.5 text-black dark:text-white">
+              <ul class="flex flex-col space-y-8 text-xl">
+
+                <li>
+                  <div class="text-lg flex items-center gap-x-2 p-2 bg-orange-50 dark:bg-brown-10 text-orange-300 rounded-md" >
+                    <svg class="w-5 h-5">
+                      <use href="#home"></use>
+                    </svg>
+                    <a href="">صفحه اصلی</a>
+                  </div>
+                </li>
+
+                <!-- dropDown title -->
+                  <li> 
+                    <div class="drop-down-menu flex items-center px-2 justify-between text-orange-300" >
+                      <div class="flex items-center gap-x-2">
+                        <svg class="w-5 h-5">
+                          <use href="#shopping-bag"></use>
+                        </svg>
+                        <a href="">فروشگاه</a>
+                      </div>
+                      <div class="chevron-down-icon transition-all duration-500">
+                        <svg class="w-4 h-4 cursor-pointer">
+                          <use href="#chevron-down"></use>
+                        </svg>                        
+                      </div>
+                    </div>
+
+                    <!-- dropDown shop items -->
+                    <ul class="drop-down-items flex-col hidden gap-y-4 pt-4 px-7 text-zinc-700 dark:text-white text-sm">
+                      <li>
+                        <a class="" href="">قهوه ویژه</a>
+                      </li>
+                      <li class="list-disc text-orange-300">
+                        <a href="">ویژه درسطح جهانی</a>
+                      </li>
+                      <li>
+                        <a href="">ثهوه درجه یک</a>
+                      </li>
+                      <li>
+                        <a href="">ترکیبات تجاری</a>
+                      </li>
+                      <li>
+                        <a href="">کپسول قهوه</a>
+                      </li>
+                      <li>
+                        <a href="">قهوه زینو برزیلی</a>
+                      </li>
+                    </ul>
+                </li>
+
+                <li>
+                  <div class="flex items-center gap-x-2" >
+                    <svg class="w-5 h-5">
+                      <use href="#chat-bubble-left-ellipsis"></use>
+                    </svg>
+                    <a href="">دیکشنری</a>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="flex items-center gap-x-2" >
+                    <svg class="w-5 h-5">
+                      <use href="#briefcase"></use>
+                    </svg>
+                    <a href="">درباره ما</a>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="flex items-center gap-x-2" >
+                    <svg class="w-5 h-5">
+                      <use href="#document-text"></use>
+                    </svg>
+                    <a href="">بلاگ</a>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="flex items-center gap-x-2" >
+                    <svg class="w-5 h-5">
+                      <use href="#phone-arrow-up-right"></use>
+                    </svg>
+                    <a href="">تماس با ما</a>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
 
         <!-- login link & theme & cart  -->
             <div class="border-t space-y-6 pt-8 px-2.5 mt-8 border-t-gray-100 dark:border-t-white/10 text-orange-300">
@@ -384,9 +497,9 @@
       </div>
     </div>
 
-    <div
+    <!-- <div
       class="md:hidden overlay fixed inset-0 w-full h-full bg-black/40 z-10"
-    ></div>
+    ></div> -->
 
     <script src="./script/app.js"></script>
   </body>
