--- a/public/index.html
+++ b/public/index.html
@@ -760,8 +760,10 @@
         </div>
       </section>
       <section class="products">
+
         <!-- products container -->
         <div class="container px-4 pt-10 md:pt-64">
+          
           <!-- new products -->
           <div class="flex items-end justify-between">
             <div class="tracking-tightest">
@@ -775,8 +777,9 @@
               </svg>
             </div>
           </div>
+
           <!-- products -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 mt-6 child:p-5 child:bg-white child:dark:bg-zinc-700 child:shadow-normal child:rounded-xl">
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 mt-6 child:p-5 child:bg-white child:dark:bg-zinc-700 child:shadow-normal child:rounded-xl">
             <div>
               <img class="mx-auto w-64 h-48 sm:h-64" src="./images/products/p4.png" alt="" />
               <h3 class="text-xl dark:text-white font-medium line-clamp-2">
@@ -1066,6 +1069,44 @@
               </div>
             </div>
           </div>
+
+          <!-- categories -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-5 mt-16 child:bg-no-repea child:rounded-2xl h-[250px]">
+            
+            <div class="flex flex-col justify-center gap-y-5 p-10 categories-img-right text-white">
+              <h2 class="text-3xl sm:text-5xl">انواع قهوه</h2>
+              <span class="text-xl sm:text-2xl">ترکیبی و تک خاستکاه</span>
+            </div>
+            <div class="flex flex-col justify-center gap-y-5 p-10 tracking-tightest categories-img-left text-white">
+              <h2 class="text-3xl sm:text-5xl">پودرهای فوری</h2>
+              <span class="text-xl sm:text-2xl">نسکافه , هات چاکلت , ماسالا</span>
+            </div>
+
+          </div>
+
+          <div class="grid grid-cols-1 xs:grid-cols-2 md:grid-cols-3 xl:grid-cols-5 mt-36 md:mt-24 child:flex child:flex-col child:items-center child:gap-y-2 child:dark:text-white">
+            <div>
+              <img class="lg:w-56" src="./images/categories/category1.png" alt="">
+              <span class="block mb-3 text-lg md:text-2xl lg:text-2xl font-medium">قهوه دمی و اسپرسو</span>
+            </div>
+            <div>
+              <img class="lg:w-56" src="./images/categories/category2.png" alt="">
+              <span class="block mb-3 text-lg md:text-2xl lg:text-2xl font-medium">لوازم جانبی و تجهیزات</span>
+            </div>
+            <div>
+              <img class="lg:w-56" src="./images/categories/category3.png" alt="">
+              <span class="block mb-3 text-lg md:text-2xl lg:text-2xl font-medium">اسپرسو ساز</span>
+            </div>
+            <div>
+              <img class="lg:w-56" src="./images/categories/category4.png" alt="">
+              <span class="block mb-3 text-lg md:text-2xl lg:text-2xl font-medium">پک تستر قهوه</span>
+            </div>
+            <div>
+              <img class="lg:w-56" src="./images/categories/category5.png" alt="">
+              <span class="block mb-3 text-lg md:text-2xl lg:text-2xl font-medium">قهوه ترک</span>
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
