--- a/public/index.html
+++ b/public/index.html
@@ -2050,7 +2050,7 @@
           </p>
         </div>
         
-          <svg class="hidden md:inline-block w-24 h-[22px] absolute text-center top-0 left-0 right-0 mx-auto rotate-180 text-zinc-800">
+          <svg class="hidden md:inline-block w-[100px] h-[20px] absolute text-center top-0 left-0 right-0 mx-auto rotate-180 text-white dark:text-zinc-800">
             <use href="#curve-svg"></use>
           </svg>
           <div
